<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TableRow
        android:layout_width="match_parent"
        android:layout_weight="1.5"
        android:layout_height="0dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/main_title"
            android:gravity="center"
            android:textSize="35sp"
            android:textColor="@color/colorPrimary"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:padding="15dp"
        android:layout_height="52dp" >

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/main_title"
            android:background="@drawable/effects"
            android:clickable="true"
            android:elevation="10dp"
            android:src="@drawable/ic_celebrity" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:text="@string/category_title"
            android:gravity="center_vertical"
            android:textSize="30sp"
            android:textColor="@color/colorPrimaryDark"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_weight="1.2"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingBottom="10dp"
        android:layout_height="0dp" >

        <Button
            android:id="@+id/btn_start"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/green_btn"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:elevation="5dp"
            android:text="@string/btn_start" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/txt_desc"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_weight="2.2"
        android:layout_height="0dp" >
    </TableRow>

</TableLayout>